# filskalang

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  filskac  run_tests.sh  tablegen_compile_commands.yml
cmake/modules/: AddFilskalang.cmake
docs/: syntax.md
example/: simple.filska
include/: CMakeLists.txt
include/filskalang/: CMakeLists.txt
include/filskalang/AST/: AST.h
include/filskalang/Basic/: Diagnostic.def  Diagnostic.h  Location.h  TokenKinds.def  TokenKinds.h  Version.h  Version.inc.in
include/filskalang/CodeGen/: CMakeLists.txt  Dialect.h  LowerToArith.h  LowerToLLVM.h  MLIRGen.h  Ops.td
include/filskalang/Lexer/: Lexer.h  Token.h
include/filskalang/Parser/: Parser.h
include/filskalang/Sema/: Sema.h
lib/Basic/: CMakeLists.txt  Diagnostic.cpp  TokenKinds.cpp  Version.cpp
lib/CodeGen/: CMakeLists.txt  Dialect.cpp  LowerToArith.cpp  LowerToLLVM.cpp  MLIRGen.cpp  Ops.cpp
lib/Lexer/: CMakeLists.txt  Lexer.cpp
lib/Parser/: CMakeLists.txt  Parser.cpp
lib/Sema/: CMakeLists.txt  Sema.cpp
tests/: filskac.bats  filskalang.bats  nullary.bats  subprogram.bats  unary.bats
tests/src/: neg.filska  prt.filska  prt_twice.filska  set_memory.filska  subprogram.filska
tests/src/compile/: sample.filska
tools/: CMakeLists.txt
tools/driver/: CMakeLists.txt  Driver.cpp
unittests/: CMakeLists.txt
unittests/CodeGen/: CMakeLists.txt  CodeGenTest.cpp
unittests/Lexer/: CMakeLists.txt  LexerTest.cpp
unittests/Parser/: CMakeLists.txt  ParserErrorTest.cpp  ParserTest.cpp
